--- a/knuckles.cabal
+++ b/knuckles.cabal
@@ -38,6 +38,24 @@ library
     Knuckles
   build-depends:
     , base >= 4.10.1.0 && < 4.13
+    , containers >= 0.5 && < 0.7
+    , ghc
+    , ghc-paths
+    , ghc-boot-th
+  ghc-options:
+    -Wall
+    -O2
+  default-language:
+    Haskell2010
+
+executable knuckles
+  hs-source-dirs:
+    app
+  main-is:
+    Main.hs
+  build-depends:
+    , base >= 4.10.1 && < 4.13
+    , knuckles
   ghc-options:
     -Wall
     -O2
