--- a/knuckles.cabal
+++ b/knuckles.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.4
+cabal-version: 2.2
 name:
   knuckles
 version:
@@ -36,13 +36,19 @@ library
     src
   exposed-modules:
     Knuckles
+    Knuckles.Monad
   build-depends:
     , base >= 4.10.1 && < 4.13
     , containers >= 0.5 && < 0.7
     , ghc
     , ghc-paths
     , ghc-boot-th
+    , ghc-source-gen
     , directory
+    , filepath
+    , Cabal
+    , mtl
+    , optparse-applicative
   ghc-options:
     -Wall
     -O2
