--- a/knuckles.cabal
+++ b/knuckles.cabal
@@ -41,6 +41,7 @@ library
     , base >= 4.10.1 && < 4.13
     , containers >= 0.5 && < 0.7
     , ghc
+    , bimap
     , ghc-paths
     , ghc-boot-th
     , ghc-source-gen
